kubernetes/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
  labels:
    app: $APP_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $APP_NAME
  template:
    metadata:
      labels:
        app: $APP_NAME
    spec:
      containers:
        - name: $APP_NAME
          image: IMAGE_GITLAB
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 1337
              protocol: TCP
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "750Mi"
              cpu: "350m"
      imagePullSecrets:
        - name: registry-gitlab
